# uichat-mira

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  IPC_GUIDE.md  LICENSE  README.md  electron-builder.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  runtime.config.cjs
.codex/: config.toml
.githooks/: pre-commit
.github/: pi-skill-validation-trigger
.trae/: rules.md
desktop/: index.html  package.json  tailwind.config.cjs  thread_files.txt  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
docs/: API-Response-Spec.md  API_MODEL_CONFIG.md  CHANGELOG.md  CODING_STANDARDS.md  ENGINEERING_MEMORY.md  README.md  VAULT_HOME.md  WIKI_SYSTEM_SCHEMA.md  assistant-ui.md  chat-execution-trace-checklist.md  chat-execution-trace-design.md  chat-remediation-checklist.md  chat-system-practices.md  chat-tool-integration-checklist.md  chat-tool-integration-poc.md  chat-tool-integration-research.md  defect-log.md  enterprise-wecom-integration-poc.md  evaluation-workbench.md  frontend-i18n.md  harness-runtime-design.md  knowledge-base-api.md  knowledge-base-backend-schema.md  knowledge-base-mvp.md  lark-feishu-integration-poc.md  markdown-workspace-mode.md  product-roadmap-priorities.md  provider-api-standards.md  provider-integration-optimization.md  provider-proxy-api.md  rag-langgraph-flow.md  read-skill-design.md  role-api.md  role.md  terminal-capability-checklist.md  tools-ecosystem-research.md  tools-protocol.md  uchat.md  (+5 more)
tauri/: .gitignore  Cargo.toml  README.md  SETUP.md  tauri.conf.json
tauri/src/: main.rs
(+2902 files in other folders)
