[package]
name = "ui-chat-rag-tester"
version = "0.1.0"
description = "UI Chat RAG Tester - Tauri Desktop App"
authors = ["Dang Jingtao <dangjingtao@163.com>"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
which = "6.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
